# simple-MCP-server

./: .env  .gitignore  DEPLOYMENT.md  README.md  env.example  index.py  local_server.py  main.py  pyproject.toml  requirements.txt  server.py  vercel.json
api/: index.py
