[project]
name = "simple-pyton-mcp"
version = "0.1.0"
description = "Simple Python MCP Server"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Developer" }]
keywords = ["mcp", "llm", "python"]
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "mcp>=1.13.1",
    "requests>=2.32.5",
]
